--- a/src/styles.css
+++ b/src/styles.css
@@ -50,3 +50,14 @@ body {
     margin-top: 20px;
     color: #666;
 }
+
+input[type="range"] {
+    width: 100%;
+    margin: 10px 0;
+}
+
+input[type="color"] {
+    width: 100%;
+    height: 40px;
+    margin: 10px 0;
+}
